# models/model.vital.js
@@ -1,6 +1,7 @@
 const mongoose = require('mongoose');
 
 const vitalSignsSchema = new mongoose.Schema({
+    patient_id: { type: String, required: true }, // Ensure patient_id is stored as a string
     heartRate: {
         min: { type: Number, required: true },
         max: { type: Number, required: true },
@@ -29,21 +30,36 @@ const vitalSignsSchema = new mongoose.Schema({
         critical_high: { type: Number, default: null },
         unit: { type: String, required: true }
     },
-    bp_systolic: {
+    bloodPressure: {
+        systolic: {
+            min: { type: Number, required: true },
+            max: { type: Number, required: true },
+            critical_low: { type: Number, required: true },
+            critical_high: { type: Number, required: true },
+            unit: { type: String, required: true }
+        },
+        diastolic: {
+            min: { type: Number, required: true },
+            max: { type: Number, required: true },
+            critical_low: { type: Number, required: true },
+            critical_high: { type: Number, required: true },
+            unit: { type: String, required: true }
+        }
+    },
+    painLevel: {
         min: { type: Number, required: true },
         max: { type: Number, required: true },
-        critical_low: { type: Number, required: true },
+        critical_low: { type: Number, default: null },
         critical_high: { type: Number, required: true },
         unit: { type: String, required: true }
     },
-    bp_diastolic: {
+    glucose: {
         min: { type: Number, required: true },
         max: { type: Number, required: true },
         critical_low: { type: Number, required: true },
         critical_high: { type: Number, required: true },
         unit: { type: String, required: true }
     }
-
 });
 
 const VitalSigns = mongoose.model('VitalSigns', vitalSignsSchema);
