# swagger/swagger-output.json
@@ -652,6 +652,45 @@
                     "Patient"
                 ]
             }
+        },
+        "/vital/add-vital": {
+            "post": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "patient_id": {
+                                    "example": "any"
+                                },
+                                "vitalSigns": {
+                                    "example": "any"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "tags": [
+                    "Vital"
+                ]
+            }
         }
     },
     "tags": [
@@ -670,6 +709,10 @@
         {
             "name": "Patient",
             "description": "Endpoints for patient"
+        },
+        {
+            "name": "Vital",
+            "description": "Endpoints for vital"
         }
     ]
 }
